# VerumTrade

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  index.html  main.py  pyproject.toml  requirements.txt  run.py  setup.py  start.bat  start.sh  start_journal_daemon.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: analysis_continuation_checks.py  database.py  main.py  models.py  schemas.py  utils.py
api/routes/: analysis.py  discovery.py  history.py
cli/: analysis_utils.py  discovery_report_logger.py  discovery_stage_logger.py  discovery_utils.py  journal_cli.py  main.py  models.py  portfolio_analysis_utils.py  utils.py
cli/static/: welcome.txt
data/themes/: taxonomy.yaml
demos/example-reports/: MU-2026-06-23.html  MU-2026-06-23.md  example_report_html_export_check.py  export_example_report_html.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  CatalystDiagnosticsPanel.jsx  DebateWorkflowPanel.jsx  DecisionTracePanel.helpers.js  DecisionTracePanel.jsx  DiscoveryDecisionPanel.jsx  DiscoverySignalsPanel.jsx  EvidenceGraphPanel.jsx  JsonReportRenderer.jsx  ThemeCandidatesPanel.jsx  TraderReasoningPanel.jsx  analysisConfig.js  analysisConfig.test.mjs  branding.check.mjs  debateWorkflowViewModel.check.mjs  debateWorkflowViewModel.js  decisionTracePanelHelpersCheck.mjs  discoverySignalsViewModel.check.mjs  discoverySignalsViewModel.js  index.css  jsonReportUtils.js  providerConfig.check.mjs  providerConfig.js  reportAccordionPerformanceCheck.mjs  reportFormatting.js  reportFormatting.test.mjs  transcriptDisplay.js  transcriptDisplay.test.mjs
journal/: trade_journal.db
journal/lessons_chromadb/: chroma.sqlite3
journal_cli/: README.md  import_scheduled_reports.py  start_journal_daemon.py  sync_positions_to_journal.py  update_trade_dates.py
opentrace/: default_config.py
opentrace/agents/: __init__.py
opentrace/dataflows/: config.py
opentrace/execution/: alpaca_executor.py  decision_guard.py  execution_kwargs.py  portfolio_context.py  qa_decision_guard_price_extraction.py
opentrace/graph/: __init__.py  batch_analysis.py  conditional_logic.py  debate_schema.py  decision_schema.py  evidence_ledger_schema.py  glm_compat.py  opentrace_graph.py  plan_patch_schema.py  portfolio_analyzer.py  propagation.py  reflection.py  setup.py  signal_processing.py  stock_discovery.py  structured_schemas.py
opentrace/utils/: __init__.py  market_session.py  report_sanitization.py
scripts/: snapshot_estimates.py
tests/: test_alpaca_executor_order_type_parsing.py  test_alpha_vantage_news_compact.py  test_analyst_capability_upgrade.py  test_cli_analysis_utils_execution_args.py  test_cli_multi_ticker_analyze_dispatch.py  test_context_budget.py  test_dataflow_compaction.py  test_extended_hours_normalization.py  test_market_session_context.py  test_prompt_limit_enforcement.py  test_prompt_sizes_nodes.py  test_qwen_context_guard_smoke.py  test_run_scoped_tool_cache.py  test_signal_processing.py  test_time_horizon.py  test_tool_call_sanitize.py  test_vendor_telemetry.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py
tradingagents/dataflows/: alpaca.py  alpha_vantage_news.py  config.py  estimate_revisions_db.py  google.py  interface.py  openai.py  stockstats_utils.py  y_finance.py
tradingagents/execution/: __init__.py  alpaca_executor.py  decision_guard.py  execution_kwargs.py  portfolio_context.py  qa_decision_guard_price_extraction.py
tradingagents/graph/: __init__.py  batch_analysis.py  conditional_logic.py  decision_schema.py  portfolio_analyzer.py  propagation.py  provider_settings.py  reasoning_trace.py  setup.py  signal_processing.py  stock_discovery.py  trading_graph.py
tradingagents/schemas/: __init__.py  catalyst_events.py
tradingagents/utils/: __init__.py  market_session.py
verumtrade/: default_config.py
verumtrade/agents/: __init__.py
verumtrade/dataflows/: config.py  interface.py
verumtrade/execution/: alpaca_executor.py  decision_guard.py  qa_decision_guard_price_extraction.py
verumtrade/graph/: __init__.py  batch_analysis.py  conditional_logic.py  debate_schema.py  decision_diff.py  evidence_ledger_schema.py  openai_compat.py  plan_patch_schema.py  portfolio_analyzer.py  propagation.py  provider_settings.py  reflection.py  setup.py  signal_processing.py  stock_discovery.py  (+1 more)
(+321 files in other folders)
